--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Power the Grid</title>
   </head>
   <body>
-    <a href="one.html"><h1>Hello World</h1></a>
+    <a href="one.html"><h1>Hello World!</h1></a>
   </body>
 </html>
